@@ -17,6 +17,9 @@ glibc (2.21-0experimental2) UNRELEASED; urgency=medium
     #797538.
   * Drop loongson-2f flavour on mipsel as this machine is not supported
     anymore (default to R2 ISA).
+  * kfreebsd/local-sysdeps.diff: update to revision 5772 (from glibc-bsd).
+    Closes: #764692, #785796.
+
 
   [ Helmut Grohne ]
   * Fix some issues with stage 1.  Closes: #797831.
